2023-07-13T01:47:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5538184231 # 984
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 19 63
* notice: prev accum: outdated-unq outdated-all / unq all: 514 823 / 557 890
* notice: next accum: outdated-unq outdated-all / unq all: 516 827 / 557 890
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-28] / []

2023-07-12T16:22:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5534028861 # 983
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
* notice: last 14d: unq all: 19 64
* notice: prev accum: outdated-unq outdated-all / unq all: 514 823 / 556 889
* notice: next accum: outdated-unq outdated-all / unq all: 514 823 / 557 890
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-06-28 2023-07-12]

2023-07-12T01:46:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5526653451 # 981
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
* notice: last 14d: unq all: 19 65
* notice: prev accum: outdated-unq outdated-all / unq all: 512 819 / 556 889
* notice: next accum: outdated-unq outdated-all / unq all: 514 823 / 556 889
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +4 -1 -1 / 1 3
* notice: removed / changed dates: [2023-06-27] / [2023-06-28]

2023-07-11T16:22:30Z: