@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-06-30T01:41:36Z",
-  "count" : 4,
+  "timestamp" : "2023-07-13T08:21:39Z",
+  "count" : 3,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "count_decinc" : [ -1, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
