@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-13T01:47:55Z",
+  "timestamp" : "2023-07-13T08:21:39Z",
   "count_outdated" : 827,
   "uniques_outdated" : 516,
-  "count" : 890,
-  "uniques" : 557,
+  "count" : 892,
+  "uniques" : 559,
   "clones" : [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 0, 4 ],
+      "count_decinc": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
