@@ -1,10 +1,10 @@
 {
-  "count": 63,
+  "count": 64,
   "uniques": 19,
   "clones": [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
