@@ -1,3 +1,12 @@
+2023-07-13T08:21:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5540773147 # 985
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
+* notice: last 14d: unq all: 19 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 516 827 / 557 890
+* notice: next accum: outdated-unq outdated-all / unq all: 516 827 / 559 892
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-06-29 2023-07-13]
+
 2023-07-13T01:47:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5538184231 # 984
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
